# financial-rag-assistant

./: .env.example  .gitignore  README.md  pyproject.toml
ci/: ci.yml
docker/: Dockerfile  docker-compose.yml
src/financial_rag/: __main__.py  transformer.py.txt
src/financial_rag/api/: app.py
src/financial_rag/api/routes/: generate.py  health.py
src/financial_rag/llm/: engine.py
src/financial_rag/logging/: store.py
tests/: test_generate.py  test_health.py  test_placeholder.py
